# ratchet

./: Cargo.toml  README.md
src/: crypto.rs  lib.rs  state.rs
tests/: crypto_tests.rs  state_tests.rs
